# vpdiscordbot

./: .gitignore
DiscordBot/: discordbot.js
VPBot_src/include/: botsettings.hpp
VPBot_src/src/: CMakeLists.txt  vpdiscordbot.cpp
