include_directories ( "${PROJECT_SOURCE_DIR}/include" )

if ( "${CMAKE_SYSTEM_NAME}" MATCHES "Linux" )
    set ( THIRD_PARTY_DIR "${PROJECT_SOURCE_DIR}/thirdparty/linux64" )
    set ( AWSDK_LIB "${THIRD_PARTY_DIR}/lib/libvpsdk.so" )
    set ( AWSDK_LIB_INSTALL "${AWSDK_LIB}" )
    include_directories ( "${PROJECT_SOURCE_DIR}/thirdparty/linux64/include" )
elseif ( WIN32 )
    if ( MINGW )
        message ( FATAL_ERROR "VPSDK does not support MinGW. Please use MSVC." )
    else () 
        set ( THIRD_PARTY_DIR "${PROJECT_SOURCE_DIR}/thirdparty/win-msvc" )
        include_directories ( "${PROJECT_SOURCE_DIR}/thirdparty/win-msvc/include" )
        set ( AWSDK_LIB "${THIRD_PARTY_DIR}/lib/aw.lib" )
        set ( AWSDK_LIB_INSTALL "${THIRD_PARTY_DIR}/lib/aw.dll" )
    endif ()
else ()
    message ( FATAL_ERROR "VPSDK does not support OSX." )
endif ()

set(Boost_USE_STATIC_LIBS        ON)
set(Boost_USE_MULTITHREADED      ON)
set(Boost_USE_STATIC_RUNTIME     OFF)
find_package(Boost 1.66.0 COMPONENTS system date_time)

include_directories(${Boost_INCLUDE_DIRS})
add_executable ( vpdiscordbot vpdiscordbot.cpp )
target_link_libraries ( vpdiscordbot ${AWSDK_LIB} ${Boost_LIBRARIES})
install (TARGETS vpdiscordbot DESTINATION bin )
install (FILES ${AWSDK_LIB_INSTALL} DESTINATION bin )
